CORE-16738: Alignment of icons on header mobile navigation fixed for VS homepage.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -275,8 +275,30 @@
     }
 
     &.frontpage {
-      .mobile--search {
-        visibility: hidden;
+      @include breakpoint($only-mobile) {
+        .c-menu-primary {
+          .menu--mobile-navigation {
+            width: 66.66%;
+
+            ul {
+              li {
+                &:nth-child(2) {
+                  display: none;
+                }
+              }
+            }
+          }
+
+          .store {
+            width: 100%;
+          }
+        }
+
+        header {
+          .block-cart-mini-block {
+            width: 33.33%;
+          }
+        }
       }
     }
 
